--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,14 @@
         android:orientation="vertical">
 
         <fragment
-            android:id="@+id/titleFragment"
-            android:name="com.example.android.navigation.TitleFragment"
+            android:id="@+id/myNavHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <!-- TODO (04) Add a fragment tag for the titleFragment in the LinearLayout
-             Use @+id/titleFragment for the android:id
-             Use com.example.android.navigation.TitleFragment for the android:name
-             Use match_parent for the layout_height and layout_width -->
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation"/>
+
+        <!-- defaultNavHost=true means that this nav host will intercept the system back key -->
     </LinearLayout>
 
 </layout>
